--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,12 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pytest-hammertime = "*"
+flake8-import-order = "*"
+flake8-per-file-ignores = "*"
+mypy = "*"
+flake8 = "*"
+pytest = "*"
 
 [packages]
 responses = "*"
@@ -11,3 +17,9 @@ requests = "*"
 
 [requires]
 python_version = "3.7"
+
+[scripts]
+check = "sh -c 'mypy . && flake8 . && pytest -q'"
+bundle = "python setup.py sdist bdist_wheel"
+sweep = "rm -fr build dist faastpact_mocker.egg-info"
+deploy = "twine upload dist/*"
