Rename to faaspact_maker

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [tool:pytest]
 addopts = --hammertime --doctest-modules
-testpaths = faaspact_mocker
+testpaths = faaspact_maker
 
 [flake8]
 max_line_length = 100
-application_import_names = faaspact_mocker
+application_import_names = faaspact_maker
 per_file_ignores =
   __init__.py: F401
 
