--- a/Pipfile
+++ b/Pipfile
@@ -22,5 +22,5 @@ python_version = "3.7"
 [scripts]
 check = "sh -c 'mypy . && flake8 . && pytest -q'"
 bundle = "python setup.py sdist bdist_wheel"
-sweep = "rm -fr build dist faastpact_maker.egg-info"
+sweep = "rm -fr build dist faaspact_maker.egg-info"
 deploy = "twine upload dist/*"
